tests/neg/i16156/Use_2.scala

object Use:
  val repo = new Repo[String]
  val v = repo.summonEncoder // error happens here!
